test/bad/functions/variadic04.px

func f(...x: [Int]) def
    return

f(...[2.5])
